<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".researchResults">

    <include layout="@layout/action_bar"/>

    <TableLayout
        android:layout_width="371dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="40dp"
        android:layout_marginLeft="40dp"
        android:layout_marginTop="80dp"
        android:layout_marginEnd="40dp"
        android:layout_marginRight="40dp"
        android:layout_marginBottom="40dp"
        android:background="@color/white">

        <!--Table Header-->
        <TableRow
            android:id="@+id/researchResults_tableHeader"
            android:layout_height="96dp"
            android:background="@color/darkGreen">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_weight="4"
                android:padding="10sp"
                android:text="@string/research_results_tableHeading_assNum"
                android:textColor="@color/white"
                android:textSize="10sp"></TextView>

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_weight="4"
                android:padding="10sp"
                android:text="@string/research_results_tableHeading_Fname"
                android:textColor="@color/white"
                android:textSize="12sp"></TextView>

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_weight="4"
                android:padding="10sp"
                android:text="@string/research_results_tableHeading_Lname"
                android:textColor="@color/white"
                android:textSize="12sp"></TextView>

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_weight="4"
                android:padding="10sp"
                android:text="@string/research_results_tableHeading_birth"
                android:textColor="@color/white"
                android:textSize="12sp"></TextView>

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_weight="4"
                android:padding="10sp"
                android:text="@string/research_results_tableHeading_fileNum"
                android:textColor="@color/white"
                android:textSize="12sp"></TextView>

        </TableRow>

        <!--Table Data not connected to firebase-->
        <TableRow
            android:id="@+id/row1PatientResult"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_weight="4"
                android:padding="10sp"
                android:text="@string/row1assNum"
                android:textSize="12sp"></TextView>

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_weight="4"
                android:padding="10sp"
                android:text="@string/row1Fname"
                android:textSize="12sp"></TextView>

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_weight="4"
                android:padding="10sp"
                android:text="@string/row1Lname"
                android:textSize="12sp"></TextView>

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_weight="4"
                android:padding="10sp"
                android:text="@string/row1birth"
                android:textSize="12sp"></TextView>

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_weight="4"
                android:padding="10sp"
                android:text="@string/row1FileNum"
                android:textSize="12sp"></TextView>


        </TableRow>


    </TableLayout>





</RelativeLayout>